# wrapc

./: .files.json  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pub.yml
examples/: basic.rs
src/: error.rs  info.rs  lib.rs  parser.rs
tests/: tests.rs
