[package]
name = "wrapc"
version = "0.1.1-2"
edition = "2021"
authors = ["Ivan Chetchasov <vi.is.chapmann@gmail.com>"]
description = "A zero-fuss parser for rustc arguments, designed for RUSTC_WRAPPER tools"
license = "MIT"
repository = "https://gitlab.com/viraven/wrapc"
documentation = "https://docs.rs/wrapc"
keywords = ["rustc", "wrapper", "parser", "build", "tool"]
categories = ["development-tools", "command-line-interface"]
readme = "README.md"

[dependencies]
# we don't use `clap` according to quite complex logic of `rustc`'s CLI.
thiserror = "1.0"

[lib]
name = "wrapc"
path = "src/lib.rs"

[badges]
gitlab = { repository = "viraven/wrapc" }
