[package]
name = "wrapc"
version = "0.1.6"
edition = "2024"
authors = ["Ivan Chetchasov <vi.is.chapmann@gmail.com>"]
description = "A zero-fuss, type-safe parser for rustc arguments, designed for RUSTC_WRAPPER tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vi-is-ramen/wrapc"
documentation = "https://vi-is-ramen.github.io/book/en/wrapc"
keywords = ["rustc", "wrapper", "parser", "build", "tool"]
categories = ["development-tools", "command-line-interface"]
readme = "README.md"

[dependencies]
thiserror = "2.0"

[lib]
name = "wrapc"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
